--- a/aluno-lista.html
+++ b/aluno-lista.html
@@ -1,17 +1,19 @@
-<div class="col-sm-4" ng-controller="AlunoListController">
-	<div class="panel panel-default">  
+<div class="col-md-6" ng-controller="AlunoListController">
+    <div class="panel panel-default">  
 		<div class="panel-heading">LISTA DE ALUNOS</div> 
 		<table class="table"> 
 			<thead> 
 				<tr> 
 					<th>Nome</th> 
-					<th>Sobrenome</th> 
+					<th>Sobrenome</th>
+					<th>Ações</th>  
 				</tr> 
 			</thead> 
 			<tbody> 
 				<tr ng-repeat="aluno in alunos"> 
 					<td>{{aluno.nome}}</td> 
 					<td>{{aluno.sobrenome}}</td> 
+					<td><a href="#" ng-click="remover(aluno)" class="btn btn-primary">x</a></td> 
 				</tr> 
 			</tbody> 
 		</table> 
