--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <body ng-app="minhaApp">
- <div  ng-include src="'aluno-lista.html'"></div>
+		<div class="col-md-12"> 
+			<div  ng-include src="'aluno-novo.html'"></div>
+		</div>
+		<div class="col-md-12">
+			<div  ng-include src="'aluno-lista.html'"></div>
+		</div>
 </body>
